@@ -1,11 +1,15 @@
 CVS HEAD
   * API Changes
-    - Client: added new method - getMidiInstrumentEntries
+    - Client: added new methods - getMidiInstrumentEntries,
+      findLostDbInstrumentFiles, setDbInstrumentFilePath,
+      getExtendedCharacterEscaping, setExtendedCharacterEscaping
+    - Parser: added new method - toExtendedEscapeSequence
 
   * Bug fixes:
     - null parameters and parameters with null names are now not sent
       to LinuxSampler
     - fixed a bug in DB_INSTRUMENTS_JOB_INFO notifications
+    - fixed bug #75
 
 jlscp v0.7a: 2007-12-06
   * Added support for monitoring the total number of active disk streams
